# RAG_sample

./: .gitignore  IT_Company_Policy_Detailed.xlsx  README.md  errores and solves.ipynb  main-stream.py  main.py  maintemp.py  old aichat copy.py  pyproject.toml  rsg stream .ipynb  try.ipynb
custom_utils/: aichat_edited.py  document_process.py  pgsql_checkpointer.py  schemas.py  vector.py
old files/: text viewer.html
old files/data files/: IT_Company_Policy_Detailed_Company Policies Detailed.csv  IT_Company_Policy_Detailed_Company Policies Detailed.md
old files/data files/clock sse timer/: timer.html  timer.py
old files/old cods/: aigraphchat.py
old files/propmpts/: aichat prompt .py
old files/trys/: simaple sse fastapi gptcode .ipynb
static/: dbchat copy.html  dbchat.html  offchat.html  offstream.html
templates/: index.html
uploaded_files/: IT-Security-Policy.txt  Incident-Management-SOP.md  django_postgres_campaign_api.md  index.html
utils/: aichat.py  aichat_edited.py  aistream.py  document_process.py  json_checkpointer.py  pgsql_checkpointer.py  qdrent_vector.py  schemas.py  seaweed.py  vector.py
